<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:fitsSystemWindows="false">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/play_screen_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_3"
        android:layout_marginTop="@dimen/space_4"
        android:backgroundTint="@color/white_transparent"
        app:backgroundTint="@color/white_transparent_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_back"
        app:tint="@null" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/play_screen_button_addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        android:layout_marginEnd="@dimen/space_3"
        android:backgroundTint="@color/white_transparent"
        app:backgroundTint="@color/white_transparent_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_addition"
        app:tint="@null" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/play_screen_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/play_screen_image_big"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/play_screen_logo_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_3"
                android:background="@drawable/play_screen_fon_logo"
                android:padding="@dimen/space_2"
                app:layout_constraintBottom_toBottomOf="@+id/play_screen_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/play_screen_image">

                <ImageView
                    android:id="@+id/play_screen_logo_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/play_screen_logo" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/play_screen_title_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/play_screen_logo_layout"
                app:layout_constraintStart_toEndOf="@id/play_screen_logo_layout">

                <TextView
                    android:id="@+id/play_screen_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_1"
                    android:fontFamily="@font/skmodernist_bold"
                    android:text="@string/play_screen_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RatingBar
                    android:id="@+id/play_screen_title_rating_bar"
                    style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:progressTint="@color/yellow"
                    android:layout_marginStart="@dimen/space_1"
                    android:numStars="5"
                    android:rating="5"
                    android:stepSize="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/play_screen_title_text" />

                <TextView
                    android:id="@+id/play_screen_title_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_1"
                    android:text="@string/play_screen_count_reviews_min"
                    android:textColor="@color/gray"
                    app:layout_constraintStart_toEndOf="@+id/play_screen_title_rating_bar"
                    app:layout_constraintTop_toTopOf="@+id/play_screen_title_rating_bar" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/play_screen_list_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_3"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/play_screen_logo_layout"
                tools:itemCount="3"
                tools:listitem="@layout/item_category" />

            <TextView
                android:id="@+id/play_screen_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_3"
                android:fontFamily="@font/skmodernist_regular"
                android:paddingHorizontal="@dimen/space_3"
                android:text="@string/play_screen_description"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/play_screen_list_category" />

            <TextView
                android:id="@+id/play_screen_review_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_3"
                android:fontFamily="@font/skmodernist_regular"
                android:text="@string/play_screen_review_ratings"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_5"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/play_screen_description" />

            <TextView
                android:id="@+id/play_screen_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_3"
                android:fontFamily="@font/skmodernist_bold"
                android:text="@string/play_screen_rating"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/play_screen_review_ratings" />

            <RatingBar
                android:id="@+id/play_screen_rating_bar"
                style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_1"
                android:progressTint="@color/yellow"
                android:numStars="5"
                android:rating="5"
                android:stepSize="0.5"
                app:layout_constraintStart_toEndOf="@+id/play_screen_rating"
                app:layout_constraintTop_toTopOf="@+id/play_screen_rating" />

            <TextView
                android:id="@+id/play_screen_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_1"
                android:fontFamily="@font/skmodernist_regular"
                android:text="@string/play_screen_count_reviews"
                android:textColor="@color/gray_light"
                android:textSize="@dimen/text_size_4"
                app:layout_constraintBottom_toBottomOf="@+id/play_screen_rating"
                app:layout_constraintStart_toEndOf="@+id/play_screen_rating"
                app:layout_constraintTop_toBottomOf="@id/play_screen_rating_bar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/play_screen_list_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_3"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/play_screen_rating"
                tools:itemCount="2"
                tools:listitem="@layout/item_comment" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/play_screen_install"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button"
                android:layout_margin="@dimen/space_3"
                android:backgroundTint="@color/yellow"
                android:fontFamily="@font/skmodernist_bold"
                android:text="@string/play_screen_button"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_6"
                app:cornerRadius="@dimen/space_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/play_screen_list_comments" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
